版本降到3.5 ，修改所有错误

--- a/twaincs/source/twaincs.csproj
+++ b/twaincs/source/twaincs.csproj
@@ -11,9 +11,9 @@
     <NoStandardLibraries>false</NoStandardLibraries>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>TWAIN</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <SccProjectName>
     </SccProjectName>
     <SccLocalPath>
@@ -106,9 +106,11 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnumExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TWAIN.cs" />
     <Compile Include="TWAINH.cs" />
+    <Compile Include="XkwExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
